src/sass/style.scss
/* ... */
#record {
  display: flex;
  max-height: 400px;
  height: 75vw;
  max-width: 400px;
  width: 75vw;
  background: #000;
  border-radius: 100%;
  margin: auto;
  align-items: center;
  justify-content: center;
  animation-name: spin;
  animation-duration: 2000ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  .record-groove {
    border: 2px solid #444;
    border-radius: 100%;
    border-top: none;
    padding: 2.4rem;
    border-bottom: none;
    transform: rotate(360deg);
    @media only screen and (max-width: 550px) {
      padding: 7vw;
    }
  }
  #record-label {
    height: 20vw;
    width: 20vw;
    max-width: 110px;
    max-height: 110px;
    background: #fff;
    border-radius: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    #record-label-text {
      font-size: 1.5rem;
      line-height: 3rem;
      text-align: center;
      @media only screen and (max-width: 500px) {
        font-size: 5vw;
        line-height: 9vw;
      }
    }
    #record-hole {
      position: absolute;
      height: 8px;
      width: 8px;
      background: #000;
      border-radius: 100%;
    }
  }
}

#video-modal,
#help,
#error-modal {
  opacity: 0;
  display: flex;
  align-items: center;
  transition: opacity 500ms, z-index 500ms;
  height: 100vh;
  width: 100vw;
  padding: 20px;
  position: fixed;
  top: 0;
  background: rgba(255, 255, 255, 0.95);
  z-index: -1;
  .flex-row {
    width: 100%;
    margin-top: 4rem;
  }
  h2 {
    @media only screen and (max-width: 400px) {
      font-size: 1.5rem;
    }
  }
}

.show-loader {
  opacity: 1 !important;
  display: flex !important;
}

.show-video-modal,
.show-help,
.show-error-modal {
  opacity: 1 !important;
}

.show-video-modal {
  z-index: 101 !important;
}

.show-help {
  z-index: 200 !important;
}

.show-error-modal {
  z-index: 300 !important;
}

.video-modal-open {
  height: 100vh;
  overflow-y: hidden;
}

header {
  h1 {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 10vw;
    margin-top: 6rem;
    @media only screen and (max-width: 450px) {
      font-size: 15vw;
    }
    @media only screen and (min-width: 768px) {
      font-size: 8vw;
    }
    .b-bg-color {
      &:after {
        content: '';
        height: 5px;
        width: 5px;
        background-color: blue;
        border-radius: 50%;
      }
    }
  }
}

.top-ten-date-header {
  font-size: 6vw;
  @media only screen and (max-width: 768px) {
    font-size: 10vw;
  }
}

nav {
  position: fixed;
  top: 0;
  height: 4rem;
  padding: 1rem;
  width: 100%;
  display: flex !important;
  justify-content: space-between;
  align-items: center;
  background: rgba(230, 230, 230, 0.95);
  z-index: 1000;
  box-shadow: 0 1px 6px rgba(0, 0, 0, .05);
  span {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
  }
  .fab {
    &:hover {
      background-color: #000;
      color: #fff;
      transition: background-color 200ms, color 200ms;
    }
  }
  .fa-arrow-left {
    color: #000;
    cursor: pointer;
  }
  .h3 {
    margin-bottom: 0;
  }
  .top-ten-date {
    cursor: pointer;
  }
}

.fa-ellipsis-v {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 15px;
}

.fa-youtube {
  color: #ff0000;
  margin-right: 3px;
}

.btn:not(.btn-date-picker) {
  border-radius: 20px !important;
  box-shadow: 0 0px 4px 0 rgba(25, 33, 36, 0.14) !important; 
  border-color: #343a4036 !important;
}

.btn:focus, 
.btn.focus {
  box-shadow: none !important;
}

.btn.share-btn {
  padding: 0;
}

.share-btn {
  font-size: 1.5rem !important;
  margin-top: 10px;
}

.share-btn-date {
  position: relative;
  left: 3.5rem;
  transition: opacity 2000ms;
}

.hide-opacity {
  opacity: 0;
  transition: opacity 100ms !important;
}

.fa-share-alt {
  transition: background-color 200ms, color 200ms !important;
}

.share-active {
  background-color: #000 !important;
  color: #fff !important;
}

.fa-share-alt {
  font-size: 1.25rem;
  background: #fff;
  color: #000;
  height: 2.5rem;
  width: 2.5rem;
  text-align: center;
  border: 1px solid #000;
  padding: 10px;
  border-radius: 50%;
}

.fa-share-alt {
  background: #fff;
  z-index: 100;
}

@for $i from 1 through 5 {
  .share-slide {
       &:nth-of-type(#{$i}) i {
         transform: translateX(3 * $i + rem);
     }
  }
}

.submit {
  margin: auto;
  width: 50%;
  &:hover {
    background-color: #ff0000 !important;
    color: #fff;
  }
}

.date-btns {
  border-radius: 20px;
  box-shadow: 0 0px 4px 0 rgba(25, 33, 36, 0.14); 
  button {
    width: 100%;
    border-color: #343a4036;
  }
}

.range {
  color: #ccc;
  width: 100%;
  margin: auto;
}

.range-marker {
  position: relative;
  text-align: center;
  &:after {
    content: " ";
    position: absolute;
    bottom: -15px;
    left: 0;
    right: 0;
    margin: auto;
    width: 1px;
    height: 10px;
    border-left: 2px solid #000;
    z-index: -1;
  }
}

input[type="range"] {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  width: 100%; /* Full-width */
  height: 8px; /* Specified height */
  background: #222; /* Grey background */
  outline: none; /* Remove outline */
  // opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
  border-radius: 20px;
}

input {
  &[type="range"] {
    &::-webkit-slider-thumb {
      -webkit-appearance: none;
      appearance: none;
      width: 30px;
      height: 30px;
      border: none;
      cursor: pointer;
    }
  }
}

.slider {
  &.month {
    &::-webkit-slider-thumb {
      background: url('../images/month_slider_btn.svg') no-repeat;
    }
  }

  &.day {
    &::-webkit-slider-thumb {
      background: url('../images/day_slider_btn.svg') no-repeat;
    }
  }

  &.year {
    &::-webkit-slider-thumb {
      background: url('../images/year_slider_btn.svg') no-repeat;
    }
  }
}

.btn-group:first-child {
  border-radius: 30px;
}
/* ... */

